# citizen-services-portal

./: .gitignore  3-demo-story-line.md  4-architecture.md  Makefile  PROMPTS.md  README.md  _PROMPTS.md  architecture.md  azure.yaml  docker-compose.dev.yml  infrastructure.md  presentation-approach.md  story-line.md  strory-line.md  synopsis.md  use-cases-draft.md  use-cases.md
docs/: 5-infrastructure.md  6-ui-framework-selection.md  6-ui-wireframes-components.md  6-ui-wireframes-overview.md  6-ui-wireframes-plan-widget.md  6-ui-wireframes-user-actions.md  7-user-stories.md  agency-knowledge-base-document-inventory.md  implementation-unified-api.md  plan-step-nomenclature.md  proposal-enhanced-plan-tracking.md  rbac-changes-unified-api.md
infra/: README.md  abbreviations.json  main.bicep  main.parameters.json
prds/: 10-refactoring-mcp-reporting-to-mcp-csp.md  11-step_efficiency_dashboard.html  11-step_stats_data.json  2-use-cases.md  4-architecture.md  8-plan-step-nomenclature.md  9-proposal-enhanced-plan-tracking.md
scripts/: README-knowledge-base.md  README.md  check_action_card.py  clear-cosmos-data.py  configure-ai-gateway.sh  configure_ai_gateway_arm.py  dev-local.py  generate_step_dashboard.py  grant-agent-mcp-access.sh  pyproject.toml  query_cosmos_plan.py  query_step_stats.py  run-kb-indexers.sh  setup-dev-rbac.sh  setup-kb-permissions.sh  setup-knowledge-base.py  setup-mcp-auth.sh  test-mcp-server.sh  upload-kb-documents.py
scripts/agents/: README.md  __init__.py  pyproject.toml  run_evaluations.py  test_csp_agent_azure.py  test_csp_agent_local.py  test_csp_agent_responses.py
scripts/agents/evaluation/: __init__.py  config.py  data_collector.py  run_evaluation.py  thresholds.yaml
scripts/agents/evaluation_data/: test_queries.jsonl
scripts/ai-gateway/: configure_ai_gateway.py  pyproject.toml
scripts/knowledge-base/: README.md  pyproject.toml  run-all-tests.sh  setup-kb-permissions.sh  setup-knowledge-base.py  test-document-counts.py  test-regular-search.py  test-semantic-search.py
scripts/mcp/: fix-mcp-auth.sh  pyproject.toml  test-mcp-auth.sh  test_mcp_servers.py
specs/: 0-azure-services.md  1-spec-mcp-servers.md  10-security-azure-auth.md  2-spec-cosmosdb.md  3-spec-knowledge-base-ingestion.md  3-spec-ui-framework.md  4-spec-csp-agent.md  5-spec-web-app.md  6-spec-rbac.md  8-agent-as-azure-container-app.md  9-security.md  _ARCHITECTURE_DECISIONS.md  (+1 more)
specs-drafts-do-not-use/: _ai-gateway-configuration.md
src/agents/: README.md  deploy.py  deploy_agent.py  deploy_tools.py  export_service_urls.py  pyproject.toml  service_urls.py  test_easy_auth.py
src/agents/_future_approach/: README.md
src/agents/_future_approach/lasan/: system-prompt.md
src/agents/_future_approach_for_hosted_agents/: azure.yaml
src/agents/_future_approach_for_hosted_agents/src/agent-with-hosted-mcp/: main.py
src/agents/_future_approach_for_multi_declarative_agents/: deploy_tools.py
src/agents/_future_approach_for_multi_declarative_agents/ladbs/: README.md
src/agents/_future_approach_for_multi_declarative_agents/lasan/: README.md  agent.yaml
src/agents/csp-agent/: .dockerignore  Dockerfile  README.md  agent.yaml  cosmos_chat_store.py  cosmos_thread_repository.py  main.py  pyproject.toml  requirements.txt  test_agent.py
src/agents/csp-agent/prompts/: system_prompt.md  system_prompt_OLD.md
src/agents/ladbs/: README.md  agent.yaml  deploy.py  deploy_agent.py  deploy_tools.py  pyproject.toml  requirements.txt  system-prompt.md
src/agents/ladbs/tools/: mcp-ladbs.yaml
src/agents/ladwp/: README.md  agent.yaml  system-prompt.md
src/agents/lasan/: agent.yaml
src/mcp-servers/ladbs/: .env.example  .gitignore  Dockerfile  README.md  mcp_client_ladbs.py  mcp_server_ladbs.py  pyproject.toml  requirements.txt
src/mcp-servers/ladbs/infra/: cosmos-db.bicep
src/mcp-servers/ladbs/src/: __init__.py  config.py  models.py  services.py  tools.py
src/mcp-servers/ladbs/src/repositories/: __init__.py  inspection_repository.py  permit_repository.py
src/mcp-servers/ladbs/tests/: __init__.py  conftest.py  test_cosmosdb_integration.py  test_search_integration.py  test_tools.py
src/mcp-servers/lasan/: .env.example  Dockerfile  README.md  mcp_client_lasan.py  mcp_server_lasan.py  pyproject.toml  requirements.txt
src/mcp-servers/lasan/infra/: cosmos-db.bicep
src/mcp-servers/lasan/src/: __init__.py  config.py  models.py  services.py  tools.py
src/mcp-servers/lasan/src/repositories/: __init__.py  pickup_repository.py
src/mcp-servers/lasan/tests/: __init__.py  conftest.py  test_cosmosdb_integration.py  test_search_integration.py  test_tools.py
src/mcp-servers/reporting/: .env.example  Dockerfile  README.md  mcp_client_reporting.py  mcp_server_reporting.py  pyproject.toml  requirements.txt
src/mcp-servers/reporting/infra/: cosmos-db.bicep
src/mcp-servers/reporting/src/: __init__.py  config.py  models.py  services.py  tools.py
src/mcp-servers/reporting/src/repositories/: __init__.py  step_log_repository.py
src/mcp-servers/reporting/tests/: __init__.py  conftest.py  test_cosmosdb_integration.py  test_tools.py
src/shared/: pyproject.toml
src/shared/cosmos/: __init__.py  base_repository.py  client.py  exceptions.py  models.py
src/shared/cosmos/repositories/: __init__.py  messages.py  projects.py  reporting.py  step_completions.py  threads.py  users.py
src/web-app/: .dockerignore  .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
src/web-app/components/: __init__.py  chat_panel.py  inline_action_card.py  plan_widget.py  project_card.py  projects_panel.py  status_chips.py  user_action_card.py
src/web-app/models/: __init__.py  message.py  project.py  user.py
src/web-app/pages/: __init__.py
src/web-app/services/: __init__.py  agent_service.py  auth_service.py  mock_data.py  project_service.py  user_service.py
src/web-app/tests/: conftest.py  test_agent_integration.py  test_agent_plan_behavior.py  test_agent_service_unit.py
src/web-app/utils/: __init__.py  response_parser.py
technical-specs/: byo-ai-gateway.md  (+1 more)
(+157 files in other folders)
