[project]
name = "foundry-config-scripts"
version = "0.1.0"
description = "Scripts for configuring Azure AI Foundry resources"
requires-python = ">=3.10"
dependencies = [
    "azure-identity>=1.15.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
