[project]
name = "csp-scripts"
version = "0.1.0"
description = "Development and automation scripts for Citizen Services Portal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "azure-cosmos>=4.9",
    "azure-identity>=1.19",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false
