[project]
name = "csp-knowledge-base-scripts"
version = "0.1.0"
description = "Scripts for managing the Citizen Services Portal knowledge base"
requires-python = ">=3.10"
dependencies = [
    "azure-identity>=1.15.0",
    "azure-storage-blob>=12.19.0",
    "azure-search-documents>=11.5.0",
    "requests>=2.31.0",
]

[tool.uv]
package = false
