[project]
name = "agent-deployment-scripts"
version = "0.1.0"
description = "Generic deployment scripts for Azure AI Foundry agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.19.0",
    "azure-ai-projects>=1.0.0b3",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
]

[tool.uv]
package = false
