[project]
name = "csp-webapp"
version = "0.1.0"
description = "Citizen Services Portal Web Application"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "azure-cosmos>=4.5.1",
    "azure-identity>=1.15.0",
]

[tool.uv.sources]
citizen-services-shared = { path = "../shared", editable = true }

[project.scripts]
csp-webapp = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
